--- a/Cherukupally_Manasa_Assignment_1.ipynb
+++ b/Cherukupally_Manasa_Assignment_1.ipynb
@@ -356,48 +356,53 @@
         "\n",
         "#Question 2\n",
         "\n",
-        "# Filter rows\n",
-        "housing_units_df = df[df['title_field'].isin(['Vacant Housing Units', 'Occupied Housing Units'])]\n",
+        "import pandas as pd\n",
         "\n",
-        "# Pivoting DataFrame to have 'year' as the index,\n",
-        "housing_pivot = housing_units_df.pivot(index='year', columns='title_field', values='value')\n",
+        "# Read the data\n",
+        "df = pd.read_csv('/content/Assignment1_denton_housing.csv')\n",
         "\n",
-        "# Calculate the percentage of vacant and occupied housing units\n",
-        "housing_pivot['Vacant Housing Percent'] = (housing_pivot['Vacant Housing Units'] / (housing_pivot['Occupied Housing Units']+housing_pivot['Vacant Housing Units'])) * 100\n",
-        "housing_pivot['Occupied Housing Percent'] = (housing_pivot['Occupied Housing Units'] / (housing_pivot['Occupied Housing Units']+housing_pivot['Vacant Housing Units'])) * 100\n",
+        "# Rows with 'Occupied Housing Units'\n",
+        "occupied_df = df[df['title_field'] == 'Occupied Housing Units']\n",
         "\n",
-        "# Reset the index\n",
-        "housing_pivot.reset_index(inplace=True)\n",
+        "# Sort by 'year'\n",
+        "occupied_df = occupied_df.sort_values(by='year')\n",
         "\n",
-        "# Results\n",
-        "print(\"Year | Vacant Housing Units | Occupied Housing Units\")\n",
-        "for index, row in housing_pivot.iterrows():\n",
-        "    year = row['year']\n",
-        "    vacant_percentage = row['Vacant Housing Percent']\n",
-        "    occupied_percentage = row['Occupied Housing Percent']\n",
-        "    print(f\"{year}   | {vacant_percentage:.2f}%               | {occupied_percentage:.2f}%\")\n"
+        "# Calculate the absolute difference\n",
+        "occupied_df.loc[:, 'Occupied Diff'] = occupied_df['value'].diff().abs()\n",
+        "\n",
+        "# Removing the first row as there is no prior year to compare\n",
+        "occupied_diff = occupied_df.iloc[1:].copy()\n",
+        "\n",
+        "# Create a new column for year range\n",
+        "occupied_diff.loc[:, 'Year Range'] = (occupied_diff['year'] - 1).astype(str) + '-' + occupied_diff['year'].astype(str)\n",
+        "\n",
+        "# Sort the DataFrame using .loc\n",
+        "occupied_diff = occupied_diff.sort_values(by='Occupied Diff')\n",
+        "\n",
+        "# Print the values\n",
+        "print(occupied_diff[['Year Range', 'Occupied Diff']])\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "3T1Tp2svITDb",
-        "outputId": "bc99888b-56c3-42dc-dffd-dab779c4461a"
+        "outputId": "717e40dd-c69c-4785-f5b4-711a2e60dc59"
       },
-      "execution_count": 34,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Year | Vacant Housing Units | Occupied Housing Units\n",
-            "2008.0   | 10.88%               | 89.12%\n",
-            "2009.0   | 9.07%               | 90.93%\n",
-            "2010.0   | 8.14%               | 91.86%\n",
-            "2011.0   | 9.38%               | 90.62%\n",
-            "2012.0   | 6.68%               | 93.32%\n",
-            "2013.0   | 8.80%               | 91.20%\n",
-            "2014.0   | 5.73%               | 94.27%\n"
+            "   Year Range  Occupied Diff\n",
+            "11  2010-2011          303.0\n",
+            "17  2008-2009          795.0\n",
+            "8   2011-2012         1404.0\n",
+            "5   2012-2013         1565.0\n",
+            "2   2013-2014         2622.0\n",
+            "14  2009-2010         5091.0\n"
           ]
         }
       ]
