--- a/Cherukupally_Manasa_Assignment_1.ipynb
+++ b/Cherukupally_Manasa_Assignment_1.ipynb
@@ -32,7 +32,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "5QX6bJjGWXY9",
         "colab": {
@@ -100,7 +100,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "id": "Y0oOSlsOS0cq",
         "colab": {
@@ -198,7 +198,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "pEyqeioAT95b",
         "colab": {
@@ -292,7 +292,27 @@
         "occupied_df = occupied_df.sort_values(by='year')\n",
         "\n",
         "# Calculate the absolute difference using .loc\n",
-        "occupied_df.loc[:, 'Occupied Diff'] = occupied_df['value'].diff().abs()\n",
+        "occupied_df.loc[:, 'Occupied Absolute Diff'] = occupied_df['value'].diff().abs()\n",
+        "\n",
+        "# Removing the first row as there is no prior year to compare\n",
+        "occupied_diff = occupied_df.iloc[1:].copy()\n",
+        "\n",
+        "# Create a new column for year range\n",
+        "occupied_diff.loc[:, 'Year Range'] = (occupied_diff['year'] - 1).astype(str) + '-' + occupied_diff['year'].astype(str)\n",
+        "\n",
+        "# Sort the DataFrame using .loc\n",
+        "occupied_diff = occupied_diff.sort_values(by='Occupied Absolute Diff')\n",
+        "\n",
+        "# Print the values\n",
+        "print(occupied_diff[['Year Range', 'Occupied Absolute Diff']])\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# Calculate the normal difference using .loc\n",
+        "occupied_df.loc[:, 'Occupied Diff'] = occupied_df['value'].diff()\n",
         "\n",
         "# Removing the first row as there is no prior year to compare\n",
         "occupied_diff = occupied_df.iloc[1:].copy()\n",
@@ -304,27 +324,31 @@
         "occupied_diff = occupied_diff.sort_values(by='Occupied Diff')\n",
         "\n",
         "# Print the values\n",
-        "print(occupied_diff[['Year Range', 'Occupied Diff']])\n",
-        "\n",
-        "\n",
-        "\n"
+        "print(occupied_diff[['Year Range', 'Occupied Diff']])\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "r9GGxPrgy8xH",
-        "outputId": "0cf0fd7f-30b7-4188-fb21-f318a0e13fc1"
+        "outputId": "7741ca73-110b-4a44-87d3-5f992c201af2"
       },
-      "execution_count": 45,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "   Year Range  Occupied Absolute Diff\n",
+            "11  2010-2011                   303.0\n",
+            "17  2008-2009                   795.0\n",
+            "8   2011-2012                  1404.0\n",
+            "5   2012-2013                  1565.0\n",
+            "2   2013-2014                  2622.0\n",
+            "14  2009-2010                  5091.0\n",
             "   Year Range  Occupied Diff\n",
-            "11  2010-2011          303.0\n",
-            "17  2008-2009          795.0\n",
+            "17  2008-2009         -795.0\n",
+            "11  2010-2011         -303.0\n",
             "8   2011-2012         1404.0\n",
             "5   2012-2013         1565.0\n",
             "2   2013-2014         2622.0\n",
@@ -367,7 +391,7 @@
         "id": "3T1Tp2svITDb",
         "outputId": "3c0ecc91-4155-4844-901c-0ecf5a08f876"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -423,7 +447,7 @@
         "id": "FnfgjlJGJ3Fg",
         "outputId": "8dd7f8b0-419b-4967-d1ec-7501a6c2d268"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -460,7 +484,7 @@
         "id": "htkNv8XfMPm8",
         "outputId": "19c6782e-85bb-49da-e87b-6173d6c78bce"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
