--- a/Cherukupally_Exercise_03_ipynb.ipynb
+++ b/Cherukupally_Exercise_03_ipynb.ipynb
@@ -48,13 +48,16 @@
         "# Your answer here (no code for this question, write down your answer as detail as possible for the above questions):\n",
         "\n",
         "'''\n",
-        "The interesting text classification task is spam detection in SMS or emails. In this task, the text messages from SMS are emails are analyzed and classified whether it is a spam or\n",
-        "not. It is one of the important problem statement as it is very common to get trapped by the spam emails or messages. To keep track of such emails and trying not to become bait to\n",
-        "such emails is extremely important. Hence this problem statement is extremely useful Text classification problem statement.\n",
+        "The interesting text classification task is spam detection in SMS or emails. In this task, the text messages from SMS are emails\n",
+        "are analyzed and classified whether it is a spam or not. It is one of the important problem statement as it is very common to get\n",
+        "trapped by the spam emails or messages. To keep track of such emails and trying not to become bait to such emails is extremely important.\n",
+        "Hence this problem statement is extremely useful Text classification problem statement.\n",
         "\n",
         "The features that can be extracted from this text that will be useful in building the model are\n",
-        "1. Word frequency - That count the occurance of each word in the message which will help us in finding the unrelated or rare words like \"congratulations\", \"you have won\" etc\n",
-        "2. Existence of hyperlinks(lexical feature extraction) - Usually spam messages contain hyperlinks to to click bait the receivers . Hence it is important to check for hyperlink\n",
+        "1. Word frequency - That count the occurance of each word in the message which will help us in finding the unrelated or rare words like\n",
+        "                     \"congratulations\", \"you have won\" etc\n",
+        "2. Existence of hyperlinks(lexical feature extraction) - Usually spam messages contain hyperlinks to to click bait the receivers .\n",
+        "                                                         Hence it is important to check for hyperlink\n",
         "3. TF/IDF - Term frequency to inverse document frequency is important to know the relevance of word among the total messages in dataset.\n",
         "4. POS tagging - POS tagging is important as the spam messages may contain high number of verbs\n",
         "5. Sentiment score - It is important to know the sentiment score of the message to detect whether it is spam or not\n",
