--- a/Cherukupally_Exercise_05.ipynb
+++ b/Cherukupally_Exercise_05.ipynb
@@ -1654,8 +1654,8 @@
         "showing higher number of elements in one cluster\n",
         "In the hierarachical clustering, cluster three has the most number of elements.\n",
         "However, while KMeans excelled in identifying top terms within\n",
-        "cluster centers, Bert also performs well for clustering as it is a large language\n",
-        "model.\n",
+        "cluster centers, Bert also performed well for clustering as it is a large language\n",
+        "model trained on large volumes of data.\n",
         "'''\n"
       ]
     }
